--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <audio id="page-music" loop>
-    <source src="../music/jazzbg.mp3" type="audio/mpeg">
+    <source src="./music/jazzbg.mp3" type="audio/mpeg">
 </audio>
 
 <script>
@@ -44,4 +44,5 @@
 
     </div>
 </body>
+
 </html>
