--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
 
         <div class="content-box">
             <div class="nav-links">
+                <a href="./pages/blog.html"><button class="font">blog</button></a>
                 <a href="./pages/music.html"><button class="font">music</button></a>
                 <a href="./pages/dog.html"><button class="font">dog</button></a>
+                
             </div>
             <h1 class="font">welcome to my <mark>abode!</mark></h1>
             
@@ -46,3 +48,4 @@
 </body>
 
 </html>
+
